--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -10,11 +10,11 @@ body {
 }
 
 div#interface {
-    width: 900px; 
+    width: 950px; 
     background-color: #ffffff;
     margin: -30px auto 0px auto; /* margens (cima, esquerda, baixo, direita) */
     box-shadow: 0px 0px 10px rgba(0, 0, 0, .5);
-    padding: 30px;
+    padding: 20px;
 }
 
 p {
@@ -60,14 +60,15 @@ text-indent: marca de parágrafo (afasta para esquerda) */
 
 figure.foto-legenda{ 
     position: relative;
-    border: 8px solid white;
+    border: 5px solid white;
     box-shadow: 1px 1px 4px black;
     display: inline-block;
+    margin-left: initial;
 
 }
 figure.foto-legenda img {     
-    width: 600px;
-    height: 338px;
+    width: 500px;
+    height: 300px;
 }
 
 figure.foto-legenda figcaption { 
@@ -127,4 +128,29 @@ figure.foto-legenda:hover figcaption { /*formatação específica quando passar 
 #menu a:hover { /* link ao passar mouse */
     color: white;
     text-decoration: underline;
+}
+
+section#corpo {
+    display: block;
+    width: 520px;
+    float: left;
+    border-right: 1px solid #606060;
+    padding-right: 20px;
+}
+
+aside#lateral {
+    display: block;
+    width: 350px;
+    float: right;
+    
+}
+
+footer#rodape {
+    clear: both; /*vai limpar a configuração dos dois lados*/
+    border-top: 1px solid #606060;
+    padding-top: 15px;
+}
+
+footer#rodape p {
+    text-align: center;
 }
