--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -3,10 +3,15 @@
     font-family: 'FonteLogo';
     src: url("../_fonts/bubblegum-sans-regular.otf");
 }
+@font-face{
+    font-family: 'Lobster';
+    src: url("https://fonts.googleapis.com/css?family=Lobster&display=swap");
+}
 
 body {    
     background-color: hsla(0, 0%, 53%, 0.5);    
     color: rgba(0, 0, 0, 0.8);   
+    font-family: 'Arial', sans-serif;
 }
 
 div#interface {
@@ -22,9 +27,18 @@ p {
     text-indent: 50px;
 }
 
+a {
+    color: #606060;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 img#icone { /* imagem do oculos */
     position: absolute;
-    left: 960px;
+    left: 950px;
     top: 80px;
 }
 
@@ -89,26 +103,24 @@ figure.foto-legenda:hover figcaption { /*formatação específica quando passar 
 
 }
 
-/* FORMATAÇÃO MENU */
-
 #menu {
     display: block; /* menu será exibido como um bloco */
 }
 
-#menu ul{ /* se aplicará a todos elementos <nav> com id=menu que sejam do tipo <ul> (lista desordenada) */
+#menu ul{ 
     list-style: none; /* vai tirar os ícones de tópicos */
     text-transform: uppercase; /* deixar tudo maiusculo */
     position: absolute; /* posicionar livremente em qualquer posição da tela */
     /* position relative -> pode posicionar apenas dentro do bloco nav */
     top: -20px; /* colado na parte superior */
-    left: 500px; /* distância à esquerda */
+    left: 400px; /* distância à esquerda */
 }
 
-#menu li { /* cada linha do ul (lista) */
-    display: inline-block; /* bloco em uma linha só (horizontal) */
+#menu li { 
+    display: inline-block; 
     background-color: silver;
-    padding: 10px; /* dentro das bordas (interno) */
-    margin: 2px; /* além das bordas (externo) */
+    padding: 10px; 
+    margin: 2px; 
     transition: background-color 1s;
 }
 
@@ -117,32 +129,123 @@ figure.foto-legenda:hover figcaption { /*formatação específica quando passar 
 }
 
 #menu h1{
-    display: none; /* não vai aparecer o nome "Menu Principal" */
+    display: none; 
 }
 
-#menu a { /*links*/
+#menu a { 
     color: black;
     text-decoration: none;
 }
 
-#menu a:hover { /* link ao passar mouse */
+#menu a:hover { 
     color: white;
     text-decoration: underline;
 }
 
 section#corpo {
     display: block;
-    width: 520px;
+    width: 550px;
     float: left;
     border-right: 1px solid #606060;
     padding-right: 20px;
 }
 
+article#noticia-principal h2 {
+    font-size: 13pt;
+    color: #606060;
+    background-color: #dddddd;
+    padding: 5px 0px 5px 10px;
+    margin: 10px 0px 10px 0px;
+    
+}
+
+header#cabecalho-artigo h1 {
+    font-family: 'FonteLogo', sans-serif;
+    font-size: 20pt;
+    color: #606060;
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+
+.direita {
+    text-align: right;
+}
+
+header#cabecalho-artigo h2 {
+    font-size: 13pt;
+    color: #cecece;
+    background-color: #ffffff;
+    margin: 0px;
+}
+
+header#cabecalho-artigo h3 {
+    font-size: 10pt;
+    color: #606060;
+    
+}
+
+table#tabelaspec {
+    border: 1px solid #606060;
+    border-spacing: 0px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+table#tabelaspec td {
+    border: 1px solid #606060;
+    padding: 10px;
+    text-align: left;    
+}
+
+table#tabelaspec td.ce {
+    color: #ffffff;
+    background-color: #606060;
+    vertical-align: top;
+    font-weight: bold;
+    text-align: right;    
+}
+
+table#tabelaspec td.cd {
+    background-color: #cecece;    
+}
+
+table#tabelaspec caption {
+    color: #888888;
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 0px;
+}    
+
+#tabelaspec caption span {
+    display: block;
+    float: right;
+    color: #000000;
+    font-size: 8pt;
+    margin-top: 10px;
+}
+
 aside#lateral {
     display: block;
     width: 350px;
-    float: right;
-    
+    float: right;    
+    background-color: #dddddd;   
+    padding: 10px; 
+    margin-top: 10px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+}
+
+aside#lateral h1 {
+    font-family: 'FonteLogo', sans-serif;
+    font-size: 20pt;
+    color: #606060;
+    margin-top: 0px;    
+}
+aside#lateral h2 {
+    background-color: #606060;
+    font-size: 13pt;
+    color: #ffffff;
+    padding: 5px;
 }
 
 footer#rodape {
@@ -154,3 +257,4 @@ footer#rodape {
 footer#rodape p {
     text-align: center;
 }
+
